<resources>
    <string name="app_name">AMS Student</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Alexandre</string>
    <string name="nav_header_subtitle">mkpt - 5555</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Change Password</string>
    <string name="action_noti">Notification</string>
    <string name="action_about">About</string>
    <string name="action_my_acc">My Account</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_check_in">Check In</string>
    <string name="menu_medical_leave">Medical Leave</string>
    <string name="menu_settings">Change Password</string>
    <string name="menu_logout">Logout</string>


    <string name="dashboard_fragment">DashboardFragment</string>
    <string name="check_in_fragment">Check In Fragment</string>
    <string name="medical_leave_fragment">DashboardFragment</string>

    <string name="menu_my_acc_edit">Edit</string>
    <string name="todo">TODO</string>

    <string-array name="class_major_name">
        <item name="Knowledge Engineering"/>
        <item name="High Performance Computing"/>
        <item name="Software Engineering"/>
        <item name="Business Information System"/>
    </string-array>
    <string name="select_class_major">Choose your class</string>

    <string name="google_map_myapi">ADD YOUR MAP API HERE</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="google_map_my_own_api" translatable="false">AIzaSyDX4_2g9Hg94drkYcD7u8daPN_h-U5Ipeo</string>

    <string name="myPref">MyPreferences</string>
    <string name="mySignUpPref">MySignUpPreferences</string>

    <string name="prefName">name</string>
    <string name="prefMajor">major</string>
    <string name="prefSubject">subject</string>
    <string name="prefPhone">phone</string>
    <string name="prefEmail">email</string>
    <string name="prefAddress">address</string>
    <string name="prefPassword">password</string>
    <string name="prefProfileurl">profileurl</string>
    <string name="prefMkpt">mkpt</string>
    <string name="prefLat">Location Lat</string>
    <string name="prefLon">Location Lon</string>

    <string name="KEMajor">Knowledge Engineering</string>
    <string name="SEMajor">Software Engineering</string>
    <string name="HPCMajor">High Performance Computing</string>
    <string name="BISMajor">Business Information System</string>

</resources>
