<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_dashboard"
                android:icon="@drawable/ic_menu_dashboard"
                android:title="@string/menu_dashboard"/>
        <item
                android:id="@+id/nav_check_in"
                android:icon="@drawable/ic_menu_check_in"
                android:title="@string/menu_check_in"/>
        <item
                android:id="@+id/nav_medical_leave"
                android:icon="@drawable/ic_menu_medical_leave"
                android:title="@string/menu_medical_leave"/>
    </group>

    <item android:title="Other">
        <menu>
            <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_info"
                    android:title="About"
            />

            <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_settings"/>
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/menu_logout"/>
        </menu>
    </item>

</menu>
